# tv_prog_rust_api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample.xml  start_database.sh
.github/workflows/: docker.yml
src/: data.rs  main.rs  presentation.rs
src/data/: converters.rs  mod.rs  models.rs  repositories.rs
src/data/converters/: channel_converter.rs  mod.rs  program_converter.rs
src/data/models/: mod.rs  xmltv.rs
src/data/repositories/: channel_repository.rs  mod.rs  program_repository.rs  xml_tv_repository.rs
src/data/sources/: api.rs  db.rs
src/data/sources/api/: mod.rs  xmltv_client.rs
src/data/sources/db/: mod.rs  postgres_client.rs  schema.rs  sql_queries.rs
src/domain/: entities.rs
src/domain/entities/: channel.rs  program.rs  rating.rs
src/presentation/: handlers.rs
src/presentation/dtos/: page.rs
src/presentation/handlers/: channels_handler.rs  programs_handler.rs
src/presentation/routes/: router.rs
