[package]
name = "tv_prog_rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
zip = "4.3.0"
reqwest = "0.12.23"
serde-xml-rs = "0.8.1"
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }

